--- a/src/components/gallery/GalleryPhotoFrame.css
+++ b/src/components/gallery/GalleryPhotoFrame.css
@@ -18,8 +18,12 @@ img {
     vertical-align: middle;
   }
 
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 768px) {
     .galleryPhotoFrame {column-count: 2; width: 90%;}
+    .gallerySlidesFrame, #slideFrame {
+      width: 100%;
+      height: auto;
+    }
   }
 
   #modal {
