13th commit since gp pages with major changes added rooms and access pages

--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -6,6 +6,7 @@
     background-color: white;
     border-top: solid  rgb(162, 206, 243);
     /* background-color: rgba(235, 243, 246, 0.9); */
+    margin-top: 100px;
 }
 
 .lineColor {
