--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -40,7 +40,7 @@ body {
 }
 
 /* Main Feature Group 1 3 photos */
-.mainFeatureGroup1, .mainFeatureGroup2, .foodGroup, .activitiesMasterGroup, .activitiesImageGroup, .voicesGroup {
+.mainFeatureGroup1, .mainFeatureGroup2, .roomGroup1, .roomGroup2, .foodGroup, .activitiesMasterGroup, .activitiesImageGroup, .voicesGroup {
     display: flex;
     width: 85%;
     height: auto;
@@ -116,6 +116,49 @@ body {
     border-radius: 25px 0 0 25px;
 }
 /* End of mainFeatureGroup2 */
+
+/* Beginning of Rooms Section */
+.roomGroup1 {
+    justify-content: left;
+}
+.roomGroup2 {
+    justify-content: right;
+}
+
+.roomGroupImage1, .roomGroupImage2, .roomGroupImage4, .roomGroupImage6, .roomGroupImage3, .roomGroupImage5, .roomGroupImage7 {
+    width: 40%;
+    height: auto;
+    margin-bottom: 10px;
+    margin-left: 10px;
+} 
+
+.roomGroupText {
+    width: 55%;
+    height: auto;
+    padding-left: 25px;
+    color: black;
+} 
+
+.roomGroupImage1 {
+    border-radius: 25px 25px 0 0;
+}
+
+.roomGroupImage3, .roomGroupImage5 {
+    border-radius: 0 25px 0 0;
+}
+.roomGroupImage5 {
+    margin-right: 140px;
+}
+
+.roomGroupImage6, .roomGroupImage2, .roomGroupImage4 {
+    border-radius: 0 0 0 25px;
+}
+
+.roomGroupImage7 {
+    border-radius: 0 25px 25px 0;
+}
+
+/* END of Rooms Section */
 
 /* Food Group images and text - v2 */
 .foodGroupImage1 {
@@ -220,7 +263,7 @@ body {
 /* The following adjusts group1 and group2 presentation for small screen */
 @media only screen and (max-width: 768px) {  
     /* group1 */
-    .mainFeatureGroup1, .mainFeatureGroup1 {
+    .mainFeatureGroup1, .mainFeatureGroup2 {
         justify-content: center;
     }
 
@@ -283,6 +326,60 @@ body {
         border-radius: 0 0 25px 25px;
         order: 4;
     }
+
+    /* Rooms Group images and text - v2 */
+    .roomGroup1, .roomGroup2 {
+        justify-content: center;
+    }
+    .roomGroupText {
+        width: 100%;
+        margin-bottom: 50px;
+        order: 1;
+    }
+    .roomGroupImage1 {
+        width: 100%;
+        margin-bottom: 10px;
+        border-radius: 25px 25px 0 0;
+        order: 2;
+    }
+    .roomGroupImage2 {
+        width: 100%;
+        margin-bottom: 10px;
+        border-radius: 0 0 0 0;
+        order: 3;
+    }
+    .roomGroupImage3 {
+        width: 100%;
+        margin-bottom: 10px;
+        border-radius: 0 0 0 0;
+        order: 4;
+    }
+    .roomGroupImage4 {
+        width: 100%;
+        margin-bottom: 10px;
+        border-radius: 0 0 0 0;
+        order: 5;
+    }
+    .roomGroupImage5 {
+        width: 100%;
+        margin-bottom: 10px;
+        margin-right: 0;
+        border-radius: 0 0 0 0;
+        order: 6;
+    }
+    .roomGroupImage6 {
+        width: 100%;
+        margin-bottom: 10px;
+        border-radius: 0 0 0 0;
+        order: 7;
+    }
+    .roomGroupImage7 {
+        width: 100%;
+        margin-bottom: 10px;
+        border-radius: 0 0 0 0;
+        order: 8;
+    }
+
     /* Food Group images and text - v2 */
     .foodGroupImage1 {
         width: 100%;
